<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/opcion1"
        android:title="@string/cambiocontra" />
    <item
        android:id="@+id/opcion2"
        android:title="@string/acercaDe" />
    <item
        android:id="@+id/opcion3"
        android:title="@string/nuevaTarea" />
    <item android:id="@+id/opcion4"
    android:title="@string/otros">
    <menu>
        <item
            android:id="@+id/app1"
            android:title="@string/gmail" />
        <item
            android:id="@+id/app2"
            android:title="@string/boton" />
        <item
            android:id="@+id/app3"
            android:title="@string/sesion" />
    </menu>
    </item>
</menu>